--- a/apps/helpdesk/src/pages/aiAgent/Onboarding_V2/layout/ConvAiOnboardingLayoutV2.less
+++ b/apps/helpdesk/src/pages/aiAgent/Onboarding_V2/layout/ConvAiOnboardingLayoutV2.less
@@ -157,8 +157,8 @@
             position: fixed;
             bottom: 1.45rem;
             z-index: 4;
-            right: 120px;
-            left: 24px;
+            right: var(--layout-spacing-m);
+            left: var(--layout-spacing-m);
             padding: var(--layout-spacing-s);
             background-color: var(--neutral-grey-0);
             border-radius: var(--layout-spacing-s);
@@ -222,6 +222,8 @@
     }
 
     .logo {
+        margin-left: var(--layout-spacing-m);
+        margin-top: var(--layout-spacing-m);
         height: 26px;
         width: 100px;
         background-color: var(--neutral-grey-6); // legacy
